--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.460.0",
-    "next": "15.0.3",
+    "next": "^14.2.18",
     "postcss": "^8",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3",
     "tailwindcss-animate": "^1.0.7"
