--- a/package.json
+++ b/package.json
@@ -9,20 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-label": "2.1.0",
-    "@radix-ui/react-radio-group": "1.2.1",
-    "@radix-ui/react-slider": "1.2.1",
-    "@radix-ui/react-slot": "1.1.0",
-    "class-variance-authority": "0.7.0",
-    "clsx": "2.1.1",
-    "lucide-react": "0.460.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-radio-group": "^1.2.1",
+    "@radix-ui/react-slider": "^1.2.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.460.0",
     "next": "14.2.18",
     "postcss": "8",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "tailwind-merge": "2.5.4",
+    "tailwind-merge": "^2.5.4",
     "tailwindcss": "3",
-    "tailwindcss-animate": "1.0.7"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
